[package]
name = "omoinas"
version = "0.1.0"
authors = ["eto-shingo"]
edition = "2018"

[dependencies]
rand = "0.7"
log = "*"
simple_logger = "*"
lambda_runtime = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
reqwest = {version = "0.10.0", features=["json","blocking"]}
