[package]
name = "omoinas"
version = "0.1.1"
authors = ["eto-shingo"]
edition = "2018"

[dependencies]
rand = "0.7"
log = "*"
simple_logger = "*"
lambda_runtime = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
reqwest = {version = "0.10.0", features=["json","blocking"]}
chrono = "0.4"
rusoto_core = "0.42"
rusoto_dynamodb = "0.42"
